RESOLVED FIXED76547
Signal to skia to force A8 text from LCD output, but only when we have to disable LCD because we're in a layer
https://bugs.webkit.org/show_bug.cgi?id=76547
Summary Signal to skia to force A8 text from LCD output, but only when we have to dis...
Mike Reed
Reported 2012-01-18 09:11:47 PST
Signal to skia to force A8 text from LCD output, but only when we have to disable LCD because we're in a layer
Attachments
Patch (2.53 KB, patch)
2012-01-18 09:25 PST, Mike Reed
no flags
Patch (2.31 KB, patch)
2012-01-24 09:19 PST, Mike Reed
senorblanco: review+
webkit.review.bot: commit-queue-
Mike Reed
Comment 1 2012-01-18 09:25:59 PST
Mike Reed
Comment 2 2012-01-18 09:26:34 PST
will need skia 3061 to land, to access the new API to set the GenA8FromLCD bit
Mike Reed
Comment 3 2012-01-18 10:25:12 PST
Stephen White
Comment 4 2012-01-18 11:09:09 PST
Comment on attachment 122943 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=122943&action=review OK. r=me > Source/WebCore/ChangeLog:10 > + Existing tests should confirm nothing is broken. Antialiased text > + is disabled in layouttests, so they should be unaffected by the > + difference in antialiasing quality. Not your fault, but we really should come up with a way to override AA settings for specific layout tests. This could be done by adding to the JS API in testing/Internals (as we do for accelerated drawing, e.g.). This would allow us to test changes like this.
Kenneth Russell
Comment 5 2012-01-18 16:19:55 PST
Comment on attachment 122943 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=122943&action=review > Source/WebCore/platform/graphics/skia/SkiaFontWin.cpp:184 > + SkPaint::kGenA8FromLCD_Flag) I should suggest here to use a constant rather than a #define.
Mike Reed
Comment 6 2012-01-24 09:19:47 PST
Mike Reed
Comment 7 2012-01-24 09:21:00 PST
changed #define to a constant.
Mike Reed
Comment 8 2012-01-24 09:24:03 PST
Comment on attachment 123747 [details] Patch new API from skia (rev. 3061) has landed.
WebKit Review Bot
Comment 9 2012-01-24 10:01:53 PST
Comment on attachment 123747 [details] Patch Attachment 123747 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11334427 New failing tests: media/audio-garbage-collect.html
Stephen White
Comment 10 2012-01-24 11:31:17 PST
Comment on attachment 123747 [details] Patch media/audio-garbage-collect.html looks unrelated (failing intermittently on canaries as well). Looks good. r=me
WebKit Review Bot
Comment 11 2012-01-25 08:39:56 PST
Comment on attachment 123747 [details] Patch Rejecting attachment 123747 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/11342545
Stephen White
Comment 12 2012-01-25 11:17:50 PST
(In reply to comment #11) > (From update of attachment 123747 [details]) > Rejecting attachment 123747 [details] from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 > > ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). > > Full output: http://queues.webkit.org/results/11342545 Looks like the Reviewed by NOBODY line is missing OOPS; perhaps this is confusing the commit bot.
Vangelis Kokkevis
Comment 13 2012-01-26 12:31:05 PST
Note You need to log in before you can comment on or make changes to this bug.