Signal to skia to force A8 text from LCD output, but only when we have to disable LCD because we're in a layer https://bugs.webkit.org/show_bug.cgi?id=76547

Patch by Mike Reed <reed@google.com> on 2012-01-26
Reviewed by Stephen White.

Existing tests should confirm nothing is broken. Antialiased text
is disabled in layouttests, so they should be unaffected by the
difference in antialiasing quality.

* platform/graphics/skia/SkiaFontWin.cpp:
(WebCore::setupPaintForFont):


Canonical link: https://commits.webkit.org/94015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106029 268f45cc-cd09-0410-ab3c-d52691b4dbfc