Source/WebCore/platform/graphics/skia/SkiaFontWin.cpp
@@ -205,12 +205,24 @@ static void setupPaintForFont(SkPaint* paint, PlatformContextSkia* pcs,
     textFlags &= getDefaultGDITextFlags();
 
     // do this check after our switch on lfQuality
-    if (disableTextLCD(pcs))
+    if (disableTextLCD(pcs)) {
         textFlags &= ~SkPaint::kLCDRenderText_Flag;
+        // If we *just* clear our request for LCD, then GDI seems to
+        // sometimes give us AA text, and sometimes give us BW text. Since the
+        // original intent was LCD, we want to force AA (rather than BW), so we
+        // add a special bit to tell Skia to do its best to avoid the BW: by
+        // drawing LCD offscreen and downsampling that to AA.
+        textFlags |= SkPaint::kGenA8FromLCD_Flag;
+    }
+
+    static const uint32_t textFlagsMask = SkPaint::kAntiAlias_Flag |
+                                          SkPaint::kLCDRenderText_Flag |
+                                          SkPaint::kGenA8FromLCD_Flag;
 
     // now copy in just the text flags
+    SkASSERT(!(textFlags & ~textFlagsMask));
     uint32_t flags = paint->getFlags();
-    flags &= ~(SkPaint::kAntiAlias_Flag | SkPaint::kLCDRenderText_Flag);
+    flags &= ~textFlagsMask;
     flags |= textFlags;
     paint->setFlags(flags);
 }
